Sat Feb 28 23:30:36 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_popup): Actually resize the
	popup window before popping up.  (#135651)

Sat Feb 28 23:29:35 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_class_init): 
	* gtk/gtkcombobox.c (gtk_combo_box_init): Override the default
	handler for style_set in class_init instead of connecting to
	the signal in init. (noticed by Yosh).

Sat Feb 28 14:48:35 2004  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/main.c (read_line): #ifdef HAVE_FLOCKFILE, 
	not #ifndef HAVE_FLOCKFILE. (#135642, J. Ali Harlow)

2004-02-28  Hans Breuer  <hans@breuer.org>

	* gtk/gtkfilesystemwin32.c : adapt to add -> insert_bookmark
	change. Also merged some crossplatform code from 
	gtkfilesystemunix.c
	* gtk/gtk.def : updated externals

	* gtk/makefile.msc.in : added gtkfilechooserembed.obj

2004-02-28  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkdnd-win32.c : set current_dest_drag to NULL
	when destroying, fixes bug #120007. Also removed the mirrored
	ref counting for deprecated gdk_drag_context_<ref|unref>()
	cause it wasn't reliable anymore anyway.

	* gdk/win32/gdkdisplay-win32.c : fix typo, which should
	have broken the win32 build for everyone not using msvc

	* gdk/win32/gdkevents-win32.c : WM_GETMINAMXINFO ensure not to
	return negative values for ptMaxTrackSize, it caused snapping
	windows to their minimum size

Sat Feb 28 01:39:01 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_set_wrap_width): Support
	switching back to non-gridded mode.  (#135169)

Fri Feb 27 22:29:46 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkwidget.c (gtk_widget_can_activate_accel): Add "Since: 2.4".

Fri Feb 27 18:52:19 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooserdialog.c (gtk_file_chooser_dialog_style_set):
	Whoops.  Didn't mean to commit the size change.

Fri Feb 27 18:46:27 2004  Jonathan Blandford  <jrb@redhat.com>
